--- a/src/styles/main.postcss
+++ b/src/styles/main.postcss
@@ -6,14 +6,9 @@
 html,
 body,
 #app {
-  height: 100vh;
-  width: 100vw;
   margin: 0;
   padding: 0;
-}
-
-html.dark {
-  background: #222;
+  background: #F4F7FC;
 }
 
 #nprogress {
